recreate database and modify results

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.servlet.multipart.max-file-size=10MB
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-cn-pe33ibr74001zlgo.rwlb.rds.aliyuncs.com:3306/photo_se?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=Tongji123
+spring.datasource.url=jdbc:mysql://rm-cn-36z3pj7vj000eyfo.rwlb.rds.aliyuncs.com:3306/photo_se?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.username=rooter
+spring.datasource.password=Tj_12345
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
